--- a/src/components/home/home.module.css
+++ b/src/components/home/home.module.css
@@ -54,3 +54,24 @@
     font-size: 2.5rem;
   }
 }
+
+.note__box {
+  margin-top: 20px;
+  color: rgb(181, 66, 66);
+  padding: 20px;
+  text-align: justify;
+  max-width: 500px;
+  background-color: rgba(255, 255, 255, 0.6);
+  border-radius: 10px;
+}
+
+.note__important {
+  color: red;
+  font-weight: bold;
+  padding-bottom: 10px;
+}
+
+.note__text {
+  color: rgb(34, 54, 68);
+  line-height: 1.2;
+}
