--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -26,8 +26,12 @@
   padding: 5px;
   border-radius: 50%;
   color: rgba(255, 255, 255, 0.6);
-  box-shadow: 0 0 10px #fff;
+  background-color: rgba(255, 255, 255, 0.2);
+  border: 1px solid rgba(255, 255, 255, 0.6);
   animation: resize 4s infinite ease-in-out;
+  -o-animation: resize 4s infinite ease-in-out;
+  -moz-animation: resize 4s infinite ease-in-out;
+  -webkit-animation: resize 4s infinite ease-in-out;
 }
 
 @keyframes resize {
@@ -42,13 +46,13 @@
     font-size: 2.5rem;
   }
 }
-@-webkit-keyframes resize {
+@-moz-keyframes resize {
   50% {
     top: 75px;
     font-size: 2.5rem;
   }
 }
-@-moz-keyframes resize {
+@-webkit-keyframes resize {
   50% {
     top: 75px;
     font-size: 2.5rem;
