--- a/src/components/countries/countries.module.scss
+++ b/src/components/countries/countries.module.scss
@@ -9,14 +9,17 @@
 }
 
 .form {
-  margin-top: 40px;
+  margin: 40px auto 0;
   color: coral;
   text-align: center;
+  max-width: 400px;
+  display: flex;
 }
 
 .input {
+  flex: 1;
   background-color: #fff;
-  min-width: 30vw;
+  // min-width: 30vw;
   padding: 10px 20px;
   font-size: 100%;
   border-radius: 5px 0 0 5px;
@@ -26,6 +29,33 @@
   font-size: 100%;
   border-radius: 0 5px 5px 0;
 }
+
+.options {
+  margin: 20px auto 0;
+  box-sizing: border-box;
+  max-width: 400px;
+}
+.options__title {
+  margin-bottom: 5px;
+}
+.select__label {
+  padding-right: 5px;
+}
+.select {
+  padding: 5px;
+  border-radius: 5px;
+  font-size: 0.7rem;
+  color: $main-color-dark;
+  background-color: rgba($main-color-light, 0.5);
+  border: none;
+}
+.select:focus {
+  outline: none;
+}
+.select__option {
+  padding: 10px;
+}
+
 .loading {
   font-size: 2rem;
   text-align: center;
@@ -84,12 +114,10 @@
 }
 
 .box_country:hover {
-  // background-color: transparent;
   background-color: $bg-color-orange;
 }
 
 .box_country:hover > .countryName {
-  // display: none;
   color: $main-color-light;
 }
 
@@ -99,6 +127,4 @@
   height: 100%;
   z-index: -1;
   border-radius: 5px;
-}
-.box_country:hover > .flag {
 }
