--- a/src/components/countries/country-card.module.scss
+++ b/src/components/countries/country-card.module.scss
@@ -25,7 +25,7 @@
 .flag_box {
   position: relative;
   display: block;
-  width: 200px;
+  max-width: 200px;
   height: 150px;
   margin-bottom: 20px;
   z-index: 1;
@@ -35,7 +35,7 @@
 
 .flag_box:hover {
   //   position: absolute;
-  width: 100%;
+  max-width: 600px;
   left: 0;
 }
 .flag_box:hover ~ .list {
