--- a/src/components/countries/countries.module.scss
+++ b/src/components/countries/countries.module.scss
@@ -1,6 +1,7 @@
 @import "../../index";
 
 .countries {
+  padding-top: 70px;
 }
 .title {
   text-align: center;
@@ -67,7 +68,7 @@
 .list {
   display: flex;
   flex-wrap: wrap;
-  margin: 40px -10px 0;
+  margin: 20px -10px 0;
 }
 .item {
   width: 20%;
