--- a/src/components/errorModal/errorModal.module.scss
+++ b/src/components/errorModal/errorModal.module.scss
@@ -25,7 +25,7 @@
   border-radius: 5px;
   overflow: hidden;
   background-color: $main-color-light;
-
+  margin: 0 15px;
   box-shadow: 0px 0px 15px 7px rgba($bg-color-orange, 1);
 }
 .error__header {
