--- a/src/components/home/home.module.scss
+++ b/src/components/home/home.module.scss
@@ -1,3 +1,7 @@
+.home__page {
+  padding-top: 70px;
+}
+
 .home {
   display: flex;
   min-height: calc(100vh - 70px);
@@ -10,6 +14,7 @@
 .title {
   font-size: 3rem;
   padding: 20px;
+  text-align: center;
 }
 
 .signInText {
