--- a/src/components/signIn/signIn.module.scss
+++ b/src/components/signIn/signIn.module.scss
@@ -3,20 +3,23 @@
   color: rgb(34, 54, 68);
   width: 100vw;
   min-height: 100vh;
+  box-sizing: border-box;
+  padding: 20px;
   position: absolute;
   top: 0;
   left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .signIn__container {
-  background-color: rgba(55, 148, 174, 0.3);
   padding: 40px;
-  min-width: 400px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate3d(-50%, -50%, 0);
+  background-color: rgba(55, 148, 174, 0.3);
+  min-width: 300px;
+  box-sizing: border-box;
   border-radius: 5px;
+  position: relative;
 }
 
 .close {
@@ -28,14 +31,16 @@
   font-weight: 600;
   font-size: 1.5rem;
   text-align: center;
-  padding: 20px;
+  padding: 40px 10px 0;
 }
 
 /* SIGN IN FORM */
 .signIn__form {
+  margin-top: 20px;
   display: flex;
   flex-direction: column;
   gap: 30px;
+  width: 100%;
 }
 
 .signIn__Block {
@@ -69,6 +74,7 @@
   padding: 10px;
   line-height: 2;
   width: 100%;
+  box-sizing: border-box;
   border-bottom: 1px solid rgb(34, 54, 68);
 }
 
