--- a/src/components/users/users.module.scss
+++ b/src/components/users/users.module.scss
@@ -1,11 +1,7 @@
 @import "../../index.scss";
 
 .users {
-  width: 100vw;
-  padding: 0 10vw;
-  display: flex;
-  flex-direction: column;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  padding-top: 70px;
 }
 
 .users__form {
