--- a/src/index.scss
+++ b/src/index.scss
@@ -160,7 +160,7 @@ button {
   border: none;
   font-size: 1.2rem;
   border-radius: 5px;
-  transition: 0.2s;
+  transition: background-color 0.2s;
   cursor: pointer;
 }
 
