--- a/src/components/countries/countries.module.scss
+++ b/src/components/countries/countries.module.scss
@@ -37,24 +37,67 @@
   max-width: 400px;
 }
 .options__title {
+  margin-bottom: 10px;
+}
+.options__box {
+  display: flex;
+  gap: 10px;
+}
+
+@media screen and (max-width: 450px) {
+  .options__box {
+    flex-direction: column;
+  }
+}
+.filters__box {
+}
+.select__box {
   margin-bottom: 5px;
 }
+.select__box:last-child {
+  margin-bottom: 0;
+}
+
 .select__label {
+  display: inline-block;
+  min-width: 60px;
   padding-right: 5px;
 }
 .select {
+  min-width: 150px;
   padding: 5px;
   border-radius: 5px;
   font-size: 0.7rem;
   color: $main-color-dark;
   background-color: rgba($main-color-light, 0.5);
   border: none;
+
+  &:focus {
+    outline: none;
+  }
 }
-.select:focus {
-  outline: none;
+
+@media screen and (max-width: 450px) {
+  .select {
+    width: calc(100% - 65px);
+  }
 }
 .select__option {
   padding: 10px;
+}
+
+.Random__box {
+  flex: 1;
+}
+.random__btn {
+  width: 100%;
+  height: 100%;
+  background-color: rgba($main-color-dark, 0.6);
+
+  &:hover,
+  &:focus {
+    background-color: rgba($main-color-dark, 1);
+  }
 }
 
 .loading {
