--- a/src/components/countries/country-card.module.scss
+++ b/src/components/countries/country-card.module.scss
@@ -3,17 +3,13 @@
 .countryCard {
   background-color: rgb(160, 202, 215);
   color: $main-color-dark;
-  padding: 30px;
+  padding: 30px 0;
   box-sizing: border-box;
   width: 100vw;
   position: absolute;
   left: 0;
   top: 70px;
   min-height: calc(100vh - 70px);
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   flex-direction: column;
 }
 
 .title {
@@ -34,11 +30,10 @@
 }
 
 .flag_box:hover {
-  //   position: absolute;
   max-width: 600px;
   left: 0;
 }
-.flag_box:hover ~ .list {
+.flag_box:hover ~ .properties_table {
   display: none;
 }
 .flag_box:hover ~ .button {
@@ -49,16 +44,18 @@
   width: 100%;
   height: auto;
 }
-.list {
+
+.properties_table {
 }
-.item {
-  display: block;
-  margin-bottom: 10px;
+.properties_row {
 }
-.subTitle {
+.properties_title {
   color: $main-color-light;
+  padding: 5px;
+  min-width: 100px;
   text-align: right;
-  position: relative;
+}
+.properties_value {
   padding: 5px;
 }
 
