--- a/src/pages/countries/countries.module.scss
+++ b/src/pages/countries/countries.module.scss
@@ -160,7 +160,7 @@
 }
 
 .box_country:hover {
-  background-color: $bg-color-orange;
+  background-color: $main-color-orange;
 }
 
 .box_country:hover > .countryName {
