--- a/src/components/errorModal/errorModal.module.scss
+++ b/src/components/errorModal/errorModal.module.scss
@@ -26,7 +26,7 @@
   overflow: hidden;
   background-color: $main-color-light;
   margin: 0 15px;
-  box-shadow: 0px 0px 15px 7px rgba($bg-color-orange, 1);
+  box-shadow: 0px 0px 15px 7px rgba($main-color-orange, 1);
 }
 .error__header {
   color: $main-color-light;
